# chess-in-c

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: release-linux.yml  release-windows.yml
assets/fonts/: README.txt
assets/icons/: README.txt
assets/pieces/: README.txt
assets/sfx/: README.txt
cmake/: build_linux_release.cmake  build_onefile.cmake  build_windows_installer.cmake  png_to_ico.ps1
include/: audio.h  engine.h  game_state.h  gui.h  main_loop.h  network.h  platform_dialog.h  profile_mgr.h  secure_io.h  threading.h  types.h
src/: main.c
src/core/: audio.c  game_state.c  main_loop.c  platform_dialog.c  threading.c
src/data/: profile_mgr.c  secure_io.c
src/engine/: bitboard.c  movegen.c  search.c
src/gui/: font.c  renderer.c  ui_widgets.c
src/gui/screens/: lobby_screen.c  menu_screen.c  play_screen.c  settings_screen.c
src/network/: client.c  matchmaker.c  protocol.h  relay_server.c
tools/: engine_bench.c  package_linux.sh  package_onefile.bat
